--- a/about/index.html
+++ b/about/index.html
@@ -91,8 +91,8 @@
               <i class="fas fa-code"></i>
               <div class="text">Mobile App Dev</div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad at
-                excepturi minus error eos quibusdam.
+                Android (using Java) and cross-platform applications using
+                Flutter. iOS application using Swift coming soon !
               </p>
             </div>
           </div>
@@ -102,8 +102,8 @@
               <i class="fas fa-globe"></i>
               <div class="text">IoT</div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad at
-                excepturi minus error eos quibusdam.
+                Experience with various IoT devices and IoT services. Also have
+                experience in combining IoT and Computer-Vision !
               </p>
             </div>
           </div>
@@ -113,8 +113,8 @@
               <i class="fas fa-paint-brush"></i>
               <div class="text">Web Dev</div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad at
-                excepturi minus error eos quibusdam.
+                Slight experience in designing responsive intermediate level
+                websites using HTML, CSS, JS and bootstrap.
               </p>
             </div>
           </div>
