--- a/about-me/index.html
+++ b/about-me/index.html
@@ -51,7 +51,7 @@
           <div class="text-1">Hello, my name is,</div>
           <div class="text-2">Shivam Tandon</div>
           <div class="text-3">And I'm a <span class="typing"></span></div>
-          <a href="#">Hire me</a>
+          <a href="#contact" class="menu-btn">Hire me</a>
         </div>
       </div>
     </section>
@@ -88,7 +88,11 @@
               Well, since you're here why don't you scroll down and know me
               better, regardless of you being a family, friend, Professor or HR.
             </p>
-            <a href="#">Download CV</a>
+            <a
+              href="https://drive.google.com/file/d/1lq1urLIw0OzFLAbp8gl_a0ZRcPsX-FM7/view?usp=sharing"
+              target="_blank"
+              ><span>Download Resume</span>
+            </a>
           </div>
         </div>
       </div>
@@ -264,7 +268,7 @@
         <div class="carousel owl-carousel">
           <div class="card">
             <div class="box">
-              <img src="images/banner2.jpg" alt="" />
+              <img src="images/projects/cryptpass.png" alt="" />
               <!-- TODO:ADD PROJECT PHTOS -->
               <div class="text">CryptPass</div>
               <p>
@@ -278,7 +282,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <img src="images/banner2.jpg" alt="" />
+              <img src="images/projects/educam.png" alt="" />
               <!-- TODO:ADD PROJECT PHTOS -->
               <div class="text">EduCam</div>
               <p>
@@ -296,8 +300,8 @@
               <!-- TODO:ADD PROJECT PHTOS -->
               <div class="text">Wild Cage</div>
               <p>
-                This is IoT enabled automated cage for capturing wild animals in
-                the jungle.
+                This is IoT based automated animal cage for capturing wild
+                animals in the jungle.
                 <br />
                 <br />
                 Click to know more !
@@ -306,7 +310,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <img src="images/banner2.jpg" alt="" />
+              <img src="images/projects/dudhwa.png" alt="" />
               <!-- TODO:ADD PROJECT PHTOS -->
               <div class="text">Dudhwa Safari</div>
               <p>
@@ -320,11 +324,11 @@
           </div>
           <div class="card">
             <div class="box">
-              <img src="images/banner2.jpg" alt="" />
+              <img src="images/projects/i-control.png" alt="" />
               <!-- TODO:ADD PROJECT PHTOS -->
               <div class="text">I-Control</div>
               <p>
-                This is an andoid application for home automation, developed
+                This is IoT based application for home automation, developed
                 using flutter.
                 <br />
                 <br />
@@ -404,7 +408,7 @@
                 ></textarea>
                 <div class="button">
                   <button type="submit" value="Send" id="send_btn">
-                    Send Message
+                    Send Email
                   </button>
                 </div>
               </div>
