--- a/about-me/index.html
+++ b/about-me/index.html
@@ -51,7 +51,7 @@
           <div class="text-1">Hello, my name is,</div>
           <div class="text-2">Shivam Tandon</div>
           <div class="text-3">And I'm a <span class="typing"></span></div>
-          <a href="#contact" class="menu-btn">Hire me</a>
+          <a href="#contact">Hire me</a>
         </div>
       </div>
     </section>
