--- a/about-me/index.html
+++ b/about-me/index.html
@@ -76,7 +76,7 @@
               I'm Shivam and I'm a <span class="typing-2"></span>
             </div>
             <p>
-              I'm persuing Bachelor of Technology degree in Computer Science and
+              I'm pursuing Bachelor of Technology degree in Computer Science and
               Engineering from Ambalika Institute of Management and Technology,
               Lucknow.
               <br />
@@ -369,10 +369,7 @@
           </div>
           <div class="column right">
             <div class="text">Contact Me</div>
-            <form
-              action="mailto:shivamtandon2012@gmail.com"
-              method="post"
-              enctype="text/plain"
+            <form  
               id="form"
             >
               <div class="fields">
