--- a/about-me/index.html
+++ b/about-me/index.html
@@ -14,6 +14,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 </head>
 
@@ -99,13 +102,13 @@
     <div class="max-width">
       <h2 class="title">My Domains</h2>
       <div class="serv-content">
-        <div class="card">
+        <div class="card col-sm-4">
           <div class="box">
             <i class="fas fa-code"></i>
             <div class="text">Mobile App Dev</div>
             <p>
-              Android (using Java) and cross-platform applications using
-              Flutter. iOS application using Swift coming soon !
+              Android application (using Java) and cross-platform application development using
+              Flutter.
             </p>
           </div>
         </div>
@@ -115,8 +118,8 @@
             <i class="fas fa-globe"></i>
             <div class="text">IoT</div>
             <p>
-              Experience with various IoT devices and IoT services. Also have
-              experience in combining IoT and Computer-Vision !
+              Relevant experince in IoT projects using various micro-controller
+              boards along with some cloud services.
             </p>
           </div>
         </div>
@@ -127,7 +130,7 @@
             <div class="text">Web Dev</div>
             <p>
               Slight experience in designing responsive intermediate level
-              websites using HTML, CSS, JS and bootstrap.
+              websites using HTML, CSS and JS.
             </p>
           </div>
         </div>
@@ -148,28 +151,28 @@
           <div class="bars">
             <div class="info">
               <span>Core Java</span>
-              <span>95%</span>
+              <span>90%</span>
             </div>
             <div class="line java"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>Android</span>
-              <span>85%</span>
+              <span>60%</span>
             </div>
             <div class="line android"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>Dart</span>
-              <span>90%</span>
+              <span>80%</span>
             </div>
             <div class="line dart"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>Flutter</span>
-              <span>80%</span>
+              <span>65%</span>
             </div>
             <div class="line flutter"></div>
           </div>
@@ -177,14 +180,14 @@
           <div class="bars">
             <div class="info">
               <span>Swift</span>
-              <span>50%</span>
+              <span>*skill coming soon*</span>
             </div>
             <div class="line swift"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>MySQL</span>
-              <span>75%</span>
+              <span>50%</span>
             </div>
             <div class="line mysql"></div>
           </div>
@@ -220,40 +223,60 @@
           <div class="bars">
             <div class="info">
               <span>HTML</span>
-              <span>80%</span>
+              <span>60%</span>
             </div>
             <div class="line html"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>CSS</span>
-              <span>65%</span>
+              <span>50%</span>
             </div>
             <div class="line css"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>JavaScript</span>
-              <span>60%</span>
+              <span>40%</span>
             </div>
             <div class="line javascript"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>PHP</span>
-              <span>50%</span>
+              <span>40%</span>
             </div>
             <div class="line php"></div>
           </div>
           <div class="bars">
             <div class="info">
               <span>React JS</span>
-              <span>45%</span>
+              <span>*skill coming soon*</span>
             </div>
             <div class="line reactjs"></div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="internships" id="internships">
+    <div class="max-width">
+      <h2 class="title">Internships</h2>
+      <div class="card">
+        <div class="box">
+          <img src="images/projects/dudhwa.png" alt="" />
+          <!-- TODO:ADD PROJECT PHTOS -->
+          <div class="text">Dudhwa Safari</div>
+          <p>
+            This is an android application developed for Dudhwa National
+            Park, India.
+            <br />
+            <br />
+          </p>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
@@ -272,7 +295,6 @@
               flutter.
               <br />
               <br />
-              Click to know more !
             </p>
           </div>
         </div>
@@ -286,7 +308,6 @@
               educational institutions.
               <br />
               <br />
-              Click to know more !
             </p>
           </div>
         </div>
@@ -300,21 +321,6 @@
               animals in the jungle.
               <br />
               <br />
-              Click to know more !
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="box">
-            <img src="images/projects/dudhwa.png" alt="" />
-            <!-- TODO:ADD PROJECT PHTOS -->
-            <div class="text">Dudhwa Safari</div>
-            <p>
-              This is an android application developed for Dudhwa National
-              Park, India.
-              <br />
-              <br />
-              Click to know more !
             </p>
           </div>
         </div>
@@ -328,7 +334,6 @@
               using flutter.
               <br />
               <br />
-              Click to know more !
             </p>
           </div>
         </div>
