added new internship

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -263,17 +263,30 @@
   <section class="internships" id="internships">
     <div class="max-width">
       <h2 class="title">Internships</h2>
-      <div class="card">
-        <div class="box">
-          <img src="images/projects/dudhwa.png" alt="" />
-          <!-- TODO:ADD PROJECT PHTOS -->
-          <div class="text">Dudhwa Safari</div>
-          <p>
-            This is an android application developed for Dudhwa National
-            Park, India.
-            <br />
-            <br />
-          </p>
+      <div class="row justify-content-center">
+        <div class="card">
+          <div class="box">
+            <img src="images/projects/dudhwa.png" alt="" />
+            <!-- TODO:ADD PROJECT PHTOS -->
+            <div class="text">Dudhwa Safari App</div>
+            <p style="font-size: small;margin-top: -10px;">@Dudhwa National Park</p>
+            <br>
+            <p>
+              This is an android application developed for jungle safari.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="images/projects/robo.PNG" alt="" />
+            <!-- TODO:ADD PROJECT PHTOS -->
+            <div class="text">COVID-19 Bot</div>
+            <p style="font-size: small;margin-top: -10px;">@AKTU</p>
+            <br>
+            <p>
+              This robot automates the COVID-19 screening process.
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -313,12 +326,12 @@
         </div>
         <div class="card">
           <div class="box">
-            <img src="images/banner2.jpg" alt="" />
+            <img src="images/projects/i-control.png" alt="" />
             <!-- TODO:ADD PROJECT PHTOS -->
-            <div class="text">Wild Cage</div>
+            <div class="text">I-Control</div>
             <p>
-              This is IoT based automated animal cage for capturing wild
-              animals in the jungle.
+              This is IoT based application for home automation, developed
+              using flutter.
               <br />
               <br />
             </p>
@@ -326,12 +339,12 @@
         </div>
         <div class="card">
           <div class="box">
-            <img src="images/projects/i-control.png" alt="" />
+            <img src="images/projects/no image.png" alt="" />
             <!-- TODO:ADD PROJECT PHTOS -->
-            <div class="text">I-Control</div>
+            <div class="text">Wild Cage</div>
             <p>
-              This is IoT based application for home automation, developed
-              using flutter.
+              This is IoT based automated animal cage for capturing wild
+              animals in the jungle.
               <br />
               <br />
             </p>
