--- a/about-me/index.html
+++ b/about-me/index.html
@@ -81,9 +81,9 @@
             Engineering from Ambalika Institute of Management and Technology,
             Lucknow.
             <br />
-            July 2017 - May 2021
+            July 2017 - August 2021
             <br />
-            Presently in Seventh Semester.
+            Presently in Eight Semester.
             <br />
             <br />
             Well, since you're here why don't you scroll down and know me
